various chores and fix
make badges in search results look less like buttons

add disabled cursor to radio buttons on edit task page

add red darken-3 class on all remaining delete buttons

oops only apply striped color change on striped tables

otherwise, the date picker get an aweful color style
which does not fit, similarly for future tables potentially

dynamic timestamps

- updates timestamps at a random small time interval
- this makes them look better for the demo
- especially since we'll show a recent on-the-spot request
- i've prettified the output so that it doesn't look weird
  when you make a request a number of seconds ago, instead of
  updating it every second, it updates at random intverals
- also updated the handling of plurals for minutes, hours, days
  (only append an 's' if its not 1 hr/min/day)

delete previous topic upon new topic approval

oops fix column spacing on search page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -84,11 +84,17 @@ th.sortable {
 }
 
 /* change stripe color for tables */
-table > tbody > tr:nth-child(2n+1) > td, table > tbody > tr:nth-child(2n+1) > th {
+table.striped > tbody > tr:nth-child(2n+1) > td, table.striped > tbody > tr:nth-child(2n+1) > th {
   background-color: #edf7f7 !important;
 }
 
 /* fix positioning of badges */
 .badge {
   margin-top: 3px !important;
+}
+
+/* badge style for search results */
+.badge-search {
+  background-color: #e4e4e4 !important;
+  color: black !important;
 }
